@@ -6,7 +6,6 @@ import com.example.livescore.models.GroupEntity;
 import com.example.livescore.models.TeamEntity;
 import com.example.livescore.repository.TeamRepository;
 import com.example.livescore.service.group.GroupService;
-import com.example.livescore.service.player.PlayerService;
 import com.example.livescore.service.team.TeamFootballService;
 import com.example.livescore.service.team_statistics.TeamStatisticsService;
 import com.example.livescore.web.teams.SaveTeamDTO;
@@ -18,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class DefaultTeamFootballService
@@ -27,14 +25,12 @@ public class DefaultTeamFootballService
 
     private final GroupService groupService;
     private final TeamStatisticsService teamStatisticsService;
-    private final PlayerService playerService;
 
     public DefaultTeamFootballService(TeamRepository repository, GroupService groupService, TeamStatisticsService
-            teamStatisticsService, PlayerService playerService) {
+            teamStatisticsService) {
         super(repository);
         this.groupService = groupService;
         this.teamStatisticsService = teamStatisticsService;
-        this.playerService = playerService;
     }
 
     @Override
@@ -91,19 +87,18 @@ public class DefaultTeamFootballService
         List<TeamDTO> allTeams = repository.findAll()
                 .stream()
                 .map(TeamEntity::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         List<TeamWithPlayersDto> teamWithPlayersDto = new ArrayList<>();
 
-        for (TeamDTO team : allTeams) {
-            teamWithPlayersDto.add(
-                    TeamWithPlayersDto.builder()
-                            .teamId(team.getTeamId())
-                            .teamName(team.getTeamName())
-                            .teamLogo(team.getTeamLogo())
-                            .players(playerService.findAllPlayersOfTeam(team.getTeamId()))
-                            .build());
-        }
+//        for (TeamDTO team : allTeams) {
+//            teamWithPlayersDto.add(
+//                    TeamWithPlayersDto.builder()
+//                            .teamId(team.getTeamId())
+//                            .teamName(team.getTeamName())
+//                            .teamLogo(team.getTeamLogo())
+//                            .build());
+//        }
         return teamWithPlayersDto;
     }
 }
